--- a/1razove/src/components/slider/Slider.scss
+++ b/1razove/src/components/slider/Slider.scss
@@ -71,18 +71,30 @@
   height: 30px;
   right: -35px;
   top: 0;
+  display: none;
 
   @media (min-width: 950px) {
     position: absolute;
     width: 40px;
     height: 40px;
-    right: 30px;
-    top: -45px;
-  }
-
-  @media (min-width: 950px) {
     top: 0;
     right: -45px;
+    display: block;
+  }
+
+  &--mobile{
+    top: 0;
+    right: 0;
+    padding: 30px;
+    display: block;
+
+    &::before, &::after {
+      margin: 10px;
+    }
+
+    @media (min-width: 950px) {
+      display: none;
+    }
   }
 
   &::before {
@@ -130,27 +142,40 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  padding: 20px;
 
   &--absolute{
     position: absolute;
+    background-color: #fff;
+
+    @media (min-width: 950px) {
+      background-color: transparent;
+    }
   }
 
   &-left{
     position: absolute;
-    width: 50%;
     left: 0;
-    width: 50%;
+    width: 33%;
     height: 100%;
+    outline: none;
     //z-index: 99;
+
+    @media (min-width: 950px) {
+      z-index: 1;
+    }
   }
 
   &-right{
     position: absolute;
-    width: 50%;
+    width: 33%;
     right: 0;
-    width: 50%;
     height: 100%;
-    //z-index: 99;
+    outline: none;
+    
+    @media (min-width: 950px) {
+      z-index: 1;
+    }
   }
 }
 
